// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> Renders the number of tabs passed by arg 1`] = `
<DocumentFragment>
  <div
    class="chakra-tabs css-1bx5ylf"
  >
    <div
      aria-orientation="horizontal"
      class="chakra-tabs__tablist css-3o7rpu"
      role="tablist"
    >
      <button
        aria-controls="tabs-:r1:--tabpanel-0"
        aria-selected="true"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="0"
        data-testid="tab-header-1"
        id="tabs-:r1:--tab-0"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-controls="tabs-:r1:--tabpanel-1"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="1"
        data-testid="tab-header-2"
        id="tabs-:r1:--tab-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-controls="tabs-:r1:--tabpanel-2"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="2"
        data-testid="tab-header-3"
        id="tabs-:r1:--tab-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-controls="tabs-:r1:--tabpanel-3"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="3"
        data-testid="tab-header-4"
        id="tabs-:r1:--tab-3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
      <button
        aria-controls="tabs-:r1:--tabpanel-4"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="4"
        data-testid="tab-header-5"
        id="tabs-:r1:--tab-4"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 5
      </button>
    </div>
    <div
      class="chakra-tabs__tab-indicator css-1axjpr8"
      style="position: absolute; transition-property: left, right, top, bottom, height, width; transition-duration: 0ms; transition-timing-function: cubic-bezier(0, 0, 0.2, 1); left: 0px; width: 0px;"
    />
    <div
      class="chakra-tabs__tab-panels css-8atqhb"
    >
      <div
        aria-labelledby="tabs-:r1:--tab-0"
        class="chakra-tabs__tab-panel css-1752b0c"
        id="tabs-:r1:--tabpanel-0"
        role="tabpanel"
        tabindex="0"
      >
        Tab 1 Content 
      </div>
      <div
        aria-labelledby="tabs-:r1:--tab-1"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r1:--tabpanel-1"
        role="tabpanel"
        tabindex="0"
      >
        Tab 2 Content 
      </div>
      <div
        aria-labelledby="tabs-:r1:--tab-2"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r1:--tabpanel-2"
        role="tabpanel"
        tabindex="0"
      >
        Tab 3 Content 
      </div>
      <div
        aria-labelledby="tabs-:r1:--tab-3"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r1:--tabpanel-3"
        role="tabpanel"
        tabindex="0"
      >
        Tab 4 Content 
      </div>
      <div
        aria-labelledby="tabs-:r1:--tab-4"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r1:--tabpanel-4"
        role="tabpanel"
        tabindex="0"
      >
        Tab 5 Content 
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Tabs /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-tabs css-1bx5ylf"
  >
    <div
      aria-orientation="horizontal"
      class="chakra-tabs__tablist css-3o7rpu"
      role="tablist"
    >
      <button
        aria-controls="tabs-:r0:--tabpanel-0"
        aria-selected="true"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="0"
        data-testid="tab-header-1"
        id="tabs-:r0:--tab-0"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-controls="tabs-:r0:--tabpanel-1"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="1"
        data-testid="tab-header-2"
        id="tabs-:r0:--tab-1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-controls="tabs-:r0:--tabpanel-2"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="2"
        data-testid="tab-header-3"
        id="tabs-:r0:--tab-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-controls="tabs-:r0:--tabpanel-3"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="3"
        data-testid="tab-header-4"
        id="tabs-:r0:--tab-3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
      <button
        aria-controls="tabs-:r0:--tabpanel-4"
        aria-selected="false"
        class="chakra-tabs__tab css-8mj2xm"
        data-index="4"
        data-testid="tab-header-5"
        id="tabs-:r0:--tab-4"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 5
      </button>
    </div>
    <div
      class="chakra-tabs__tab-indicator css-1axjpr8"
      style="position: absolute; transition-property: left, right, top, bottom, height, width; transition-duration: 0ms; transition-timing-function: cubic-bezier(0, 0, 0.2, 1); left: 0px; width: 0px;"
    />
    <div
      class="chakra-tabs__tab-panels css-8atqhb"
    >
      <div
        aria-labelledby="tabs-:r0:--tab-0"
        class="chakra-tabs__tab-panel css-1752b0c"
        id="tabs-:r0:--tabpanel-0"
        role="tabpanel"
        tabindex="0"
      >
        Tab 1 Content 
      </div>
      <div
        aria-labelledby="tabs-:r0:--tab-1"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r0:--tabpanel-1"
        role="tabpanel"
        tabindex="0"
      >
        Tab 2 Content 
      </div>
      <div
        aria-labelledby="tabs-:r0:--tab-2"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r0:--tabpanel-2"
        role="tabpanel"
        tabindex="0"
      >
        Tab 3 Content 
      </div>
      <div
        aria-labelledby="tabs-:r0:--tab-3"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r0:--tabpanel-3"
        role="tabpanel"
        tabindex="0"
      >
        Tab 4 Content 
      </div>
      <div
        aria-labelledby="tabs-:r0:--tab-4"
        class="chakra-tabs__tab-panel css-1752b0c"
        hidden=""
        id="tabs-:r0:--tabpanel-4"
        role="tabpanel"
        tabindex="0"
      >
        Tab 5 Content 
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
